Fix some alignment issues

--- a/css/agency.css
+++ b/css/agency.css
@@ -309,10 +309,22 @@ section h3.section-subheading {
   width: auto;
   max-width: 300px;
   max-height: 300px;
+  margin: 0 auto;
+  border: 7px solid white;
 }
 
 .profile-text {
-  padding: 30px 50px 30px 0;
+  padding: 30px 50px 30px 10px;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .profile-text {
+    text-align: left;
+  }
+  ul.social-buttons {
+    text-align: left;
+  }
 }
 
 #portfolio .portfolio-item {
@@ -381,22 +393,6 @@ section h3.section-subheading {
   }
 }
 
-.team-member {
-  text-align: center;
-  margin-bottom: 50px;
-}
-.team-member img {
-  margin: 0 auto;
-  border: 7px solid white;
-}
-.team-member h4 {
-  margin-top: 25px;
-  margin-bottom: 0;
-  text-transform: none;
-}
-.team-member p {
-  margin-top: 0;
-}
 aside.clients img {
   margin: 50px auto;
 }
@@ -473,16 +469,17 @@ footer ul.quicklinks {
   text-transform: none;
 }
 ul.social-buttons {
-  margin-bottom: 0;
+  margin: 0 10px;
+  text-align: center;
 }
 ul.social-buttons li a {
   display: block;
   background-color: #222222;
-  height: 40px;
-  width: 40px;
+  height: 60px;
+  width: 60px;
   border-radius: 100%;
-  font-size: 20px;
-  line-height: 40px;
+  font-size: 30px;
+  line-height: 60px;
   color: white;
   outline: none;
   -webkit-transition: all 0.3s;
